# driverless-selenium

./: .gitignore  README.md  pyproject.toml  ruff.toml  script.py
.github/workflows/: checks.yml
driverless_selenium/: __init__.py  webdriver.py
